# Organic-food-Backend/api/models/auth.model.js
@@ -1,20 +1,57 @@
 import mongoose from 'mongoose';
+import bcryptjs from 'bcryptjs';
 
 const userSchema = new mongoose.Schema({
-  FullName: {
+  fullname: {
     type: String,
     required: true
   },
-  EmailAddress: {
+  emailaddress: {
     type: String,
     unique: true,
     required: true
   },
-  Password: {
+  password: {
     type: String,
     required: true
   },
-},
-  { timestamps: true });
+  // role: {
+  //   type: String,
+  //   enum: ['user', 'admin'],
+  //   default: 'user'
+  // }
+}, { timestamps: true });
 
-export default mongoose.model('User', userSchema);
+userSchema.pre('save', async function (next) {
+  if (!this.isModified('password')) return next();
+  this.password = await bcryptjs.hash(this.password, 10);
+  next();
+});
+
+userSchema.methods.comparePassword = async function (candidatePassword) {
+  return await bcryptjs.compare(candidatePassword, this.password);
+};
+userSchema.virtual('confirmPassword')
+  .get(function () {
+    return this._confirmPassword;
+  })
+  .set(function (value) {
+    this._confirmPassword = value;
+  });
+
+
+userSchema.pre('save', function (next) {
+
+  if (!this.isModified('password')) {
+    return next();
+  }
+
+  if (this.password !== this._confirmPassword) {
+
+    this.invalidate('confirmPassword', 'Passwords do not match');
+  }
+  next();
+});
+const User = mongoose.model('User', userSchema);
+
+export default User;
