# Organic-food-Backend/api/models/user.model.js
@@ -1,12 +1,22 @@
-import mongoose from 'mongoose';
+// import mongoose from 'mongoose';
 
-const userSchema = new mongoose.Schema(
-    {
-        name: { type: String, required: true },
-        email: { type: String, required: true, unique: true },
-        password: { type: String, required: true }
-    },
-    { timestamps: true }
-);
+// const userSchema = new mongoose.Schema(
+//     {
+//         fullname: {
+//             type: String,
+//             required: true
+//         },
+//         emailaddress: {
+//             type: String,
+//             required: true,
+//             unique: true
+//         },
+//         password: {
+//             type: String,
+//             required: true
+//         }
+//     },
+//     { timestamps: true }
+// );
 
-export default mongoose.model('User', userSchema);
+// export default mongoose.model('User', userSchema);
