# Organic-food-Backend/api/validators/auth.validator.js
@@ -1,12 +1,16 @@
 import Joi from 'joi';
 
 export const registerSchema = Joi.object({
-    name: Joi.string().required(),
-    email: Joi.string().email().required(),
-    password: Joi.string().min(6).required()
+    fullname: Joi.string().required(),
+    emailaddress: Joi.string().email().required(),
+    password: Joi.string().min(6).required(),
+    // role:Joi.string().valid('user', 'admin').default('user')
+     confirmpassword: Joi.string().valid(Joi.ref('password')).required().messages({
+    'any.only': 'Passwords do not match'
+  })
 });
 
 export const loginSchema = Joi.object({
-    email: Joi.string().email().required(),
-    password: Joi.string().required()
+    emailaddress: Joi.string().email().required(),
+    password: Joi.string().min(6).required(),
 });
